Fix rswag and specs
