# swagger/v1/swagger.yaml
@@ -3,60 +3,87 @@ swagger: '2.0'
 info:
   title: API V1
   version: v1
+definitions:
+  createUser:
+    type: object
+    properties:
+      name:
+        type: string
+        example: Leslie Knope
+      dob:
+        type: string
+        example: '1975-1-1'
+      email:
+        type: string
+        example: lilsebastian1975@lycos.com
+      ident_num:
+        type: string
+        example: S1128628
+      ident_state:
+        type: string
+        example: IN
+      ident_expir:
+        type: string
+        example: '2025-1-1'
+      ident_img:
+        type: string
+        example: image.jpg
+      recom_num:
+        type: string
+        example: '32823493'
+      recom_issuer:
+        type: string
+        example: Dr. Ron Burgundy
+      recom_expir:
+        type: string
+        example: '2023-1-1'
+      recom_img:
+        type: string
+        example: image.jpg
+    required:
+    - name
+    - email
+    - dob
 paths:
   "/users":
     post:
-      summary: Creates a user
+      summary: Creates a new user
       tags:
-      - Users
+      - users
       consumes:
       - application/json
-      - application/xml
+      produces:
+      - application/json
       parameters:
-      - name: user
+      - name: data
         in: body
         schema:
-          type: object
-          properties:
-            name:
-              type: string
-            dob:
-              type: string
-            email:
-              type: string
-            ident_num:
-              type: string
-            ident_state:
-              type: string
-            ident_expir:
-              type: string
-            ident_img:
-              type: string
-            recom_num:
-              type: string
-            recom_issuer:
-              type: string
-            recom_expir:
-              type: string
-            recom_img:
-              type: string
-          required:
-          - name
-          - dob
-          - email
+          "$ref": "#/definitions/createUser"
       responses:
         '201':
           description: user created
         '422':
           description: invalid request
-  "/users/{id}":
     get:
-      summary: Retrieves a blog
+      summary: Retrieves all users
       tags:
-      - Users
+      - users
       produces:
       - application/json
-      - application/xml
+      responses:
+        '200':
+          description: user found
+          schema:
+            type: object
+            properties:
+              "$ref": "#/definitions/createUser"
+  "/users/{id}":
+    get:
+      summary: Retrieves a user
+      tags:
+      - users
+      produces:
+      - application/json
       parameters:
       - name: id
         in: path
@@ -68,38 +95,48 @@ paths:
           schema:
             type: object
             properties:
-              name:
-                type: string
-              dob:
-                type: string
-              email:
-                type: string
-              ident_num:
-                type: string
-              ident_state:
-                type: string
-              ident_expir:
-                type: string
-              ident_img:
-                type: string
-              recom_num:
-                type: string
-              recom_issuer:
-                type: string
-              recom_expir:
-                type: string
-              recom_img:
-                type: string
-            required:
-            - name
-            - dob
-            - email
+              "$ref": "#/definitions/createUser"
         '404':
           description: user not found
         '406':
           description: unsupported accept header
-servers:
-- url: https://{defaultHost}
-  variables:
-    defaultHost:
-      default: www.example.com
+    put:
+      summary: Update a user
+      tags:
+      - users
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      parameters:
+      - name: id
+        in: path
+        type: integer
+        required: true
+      - name: data
+        in: body
+        schema:
+          "$ref": "#/definitions/createUser"
+      responses:
+        '200':
+          description: user updated
+        '404':
+          description: user not found
+    delete:
+      summary: Delete a user
+      tags:
+      - users
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      parameters:
+      - name: id
+        in: path
+        type: string
+        required: true
+      responses:
+        '200':
+          description: User deleted
+        '404':
+          description: user not found
